umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0264_OC1CC(O)C2C(O)C3C(O)_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_chemaxon
category: basic_chemaxon
basic_opensmiles:
  success: true
  summary:
    sum_formula: C20O5
    atom_count: 25
    bond_count: 28
